# neuronal_activity

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  config.yaml  dvc.yaml  pretrain_VectorBert.py  pyproject.toml  requirements.txt  train_config.yaml  utils.py
.github/actions/publish-test-results/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  pre-commit.yml  test-make-install.yml
.hooks/: check_ruff_version.py
src/neuronal_activity/: pretrain_vector_bert.py  utils.py
tests/: .vimtags  test_pretrain_vector_bert.py  test_utils.py
