[settings]
convention = "google"


[tool.poetry]
name = "neuronal-activity-project"
version = "0.1.0"
description = "A project for training VectorBert models using Lightning"
authors = ["Guillaume Filion <guillaume.filion@gmail.com>"]
readme = "README.md"
packages = [{include = "neuronal_activity", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"  # Requires Python 3.10 or higher
lightning = "^2.1.3"  # PyTorch Lightning for easier deep learning
torch = "^2.1.2"  # PyTorch for deep learning
transformers = "^4.36.2"  # Hugging Face Transformers for NLP models
tqdm = "^4.66.1"  # Progress bar library
dvc = "^3.38.1"  # Data Version Control for managing data and ML pipelines
safetensors = "^0.4.1"  # Efficient and safe tensor serialization

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"  # Fast Python linter and formatter
pytest = "^7.4.0"  # Testing framework
pytest-cov = "^4.1.0"  # Coverage plugin for pytest
pre-commit = "^3.6.0"  # Pre-commit hooks for code discipline
virtualenv = "^20.25.0"  # Virtual environment creation for pre-commit hooks
pydocstyle = "^6.3.0"  # Pydocstyle for docstring checks
mypy = "^1.9.0"  # Static type checker for Python

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"  # Target Python version for linting
line-length = 100  # Maximum line length

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = [
    # Code style and formatting
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes

    # Quality and best practices
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "N",  # pep8-naming
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade

    # Imports
    "I",  # isort

    # Docstrings
    "D",  # pydocstyle

    # Complexity
    "C90",  # mccabe

    # Quotes
    "Q",  # flake8-quotes

    # Type checking
    "TCH",  # flake8-type-checking

    # Testing
    "PT",  # flake8-pytest-style

    # Function and method behavior
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return

    # Miscellaneous
    "COM",  # flake8-commas
    "ERA",  # eradicate
    "PL",  # pylint
]
ignore = []  # Ignore specific error codes

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I", "W", "Q", "COM"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]  # Ignore unused imports and docstrings in __init__.py files

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff.lint.isort]
case-sensitive = false
combine-as-imports = true
force-single-line = false
force-sort-within-sections = false
forced-separate = []
from-first = false
lines-after-imports = 2
lines-between-types = 0
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
